--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">NewsApp</string>
     <string name="all_news">Semua Berita</string>
+    <string name="terkini">Berita Terkini</string>
 </resources>
